2006-01-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ttf.cc (LY_DEFINE): new function ly:font-glyph-list.

	* VERSION (PACKAGE_NAME): release 2.7.28

	* scm/framework-ps.scm (write-preamble): use it to pick exactly
	the right font from a Mac dfont.
	(write-preamble): don't forget directory, only look at files.

	This fixes problems with TTF files in dfonts that don't match
	their PostScript names.
	 
	* lily/ttf.cc (LY_DEFINE): ly:ttf-ps-name: new routine to extract
	PS name from TTF font.

	* input/regression/tie-manual.ly: document new feature.

	* Documentation/topdocs/NEWS.tely (Top): add tie NEWS.

	* VERSION (MY_PATCH_LEVEL): bump to .28

	* Documentation/user/basic-notation.itely (Ties): add tie examples
	refs.

	* lily/tie-formatting-problem.cc (score_ties_configuration):
	symmetry penalties for outer ties.

2006-01-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tie-formatting-problem.cc (generate_configuration) 
	(set_manual_tie_configuration): skip non-pair manual
	tie-configuration, so you can set individual ties as

	  #'tie-configuration = #'((7 . 1) #t (-3 . 1))

	* input/regression/tie-chord.ly: use generateTiePattern to
	simplify file.

	* lily/tie-formatting-problem.cc (peak_around): new function.
	(score_configuration): use sliding criterion for staff line collisions. 
	(score_configuration): idem for dot collisions.
	(generate_configuration): use separate stem_gap for gap to stem.

	* lily/include/tie-formatting-problem.hh (struct Tie_details):
	separate penalty factors for x and y distance.
	(struct Tie_details): separate penalties for tip and center line collisions.

2006-01-19 Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tie-formatting-problem.cc (generate_configuration): make
	large ties avoid stafflines in the horizontal section.
	(score_configuration): use softcoded penalties
	(score_aptitude): idem.

	* lily/tie-helper.cc (from_grob): softcode tie details

	* lily/staff-symbol-referencer.cc (on_staff_line): new function
