@@ -150,10 +150,11 @@ PFA_FILES = $(ALL_FONTS:%=$(outdir)/%.pfa) $(PFA_OTF_FILES)
 ALL_GEN_FILES= $(TFM_FILES) $(TEXTABLES) $(TFM_FILES) $(LOG_FILES) $(ENC_FILES) $(LISP_FILES) $(FETA_LIST_FILES)  $(OTF_TABLES) $(NCSB_TTFS) $(PFA_FILES) $(OTF_FILES) $(SVG_FILES) $(outdir)/fonts.cache-1 
 
 #PRE_INSTALL=$(MAKE) "$(ALL_GEN_FILES)"
+
 INSTALLATION_DIR=$(local_lilypond_datadir)/fonts/source
 INSTALLATION_FILES=$(MF_FILES) $(AF_FILES)
 
-INSTALLATION_OUT_SUFFIXES=1 2 3 5 7 8 9
+INSTALLATION_OUT_SUFFIXES=1 2 3 4 5 6 
 
 INSTALLATION_OUT_DIR1=$(local_lilypond_datadir)/tex
 INSTALLATION_OUT_FILES1=$(TEXTABLES)
@@ -164,14 +165,14 @@ INSTALLATION_OUT_FILES2=$(OTF_FILES) $(NCSB_TTFS)
 INSTALLATION_OUT_DIR3=$(local_lilypond_datadir)/fonts/tfm
 INSTALLATION_OUT_FILES3=$(TFM_FILES)
 
+INSTALLATION_OUT_DIR4=$(local_lilypond_datadir)/fonts/svg
+INSTALLATION_OUT_FILES4=$(SVG_FILES)
+
 INSTALLATION_OUT_DIR5=$(local_lilypond_datadir)/fonts/type1
 INSTALLATION_OUT_FILES5=$(PFA_FILES)
 
-INSTALLATION_OUT_DIR7=$(local_lilypond_datadir)/ps/
-INSTALLATION_OUT_FILES7=$(ENC_FILES)
-
-INSTALLATION_OUT_DIR9=$(local_lilypond_datadir)/fonts/svg
-INSTALLATION_OUT_FILES9=$(SVG_FILES)
+INSTALLATION_OUT_DIR6=$(local_lilypond_datadir)/ps/
+INSTALLATION_OUT_FILES6=$(ENC_FILES)
 
 
 export MFINPUTS:=.:$(MFINPUTS)
