@@ -65,9 +65,8 @@ if not create_dir:
 	dest = args.pop()
 
 for f in args:
-	if create_dir:
-		if not os.path.isdir (f):
-			os.makedirs (f, mode=mode)
+	if create_dir and not os.path.isdir (f):
+		os.makedirs (f, mode=mode)
 		chown_me.append (f)
 	else:
 		if copy:
