@@ -1,3 +1,9 @@
+2006-01-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* stepmake/stepmake/install-out-targets.make
+	(local-install-outfiles): only create directory if
+	$(INSTALLATION_OUT_DIR) is defined. This fixes install on Gentoo.
+
 2006-01-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/ttf.cc (LY_DEFINE): new function ly:font-glyph-list.
